force-app/main/default/objects/Billings__c/Billings__c.object-meta.xml
<CustomObject>
    <description>Standard Invoice for Accounts Receivables. Change Order will be the primary driver of this.</description>
    <label>BT Sales Invoice (AR)</label>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT Sales Invoices (AR)</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>