force-app/main/default/objects/Billings__c/fields/BT_Finance_Transaction__c.field-meta.xml
<CustomField>
    <fullName>BT_Finance_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BT Finance Transaction</label>
    <referenceTo>Finance_Transaction__c</referenceTo>
    <relationshipLabel>BT Sales Invoices (AR)</relationshipLabel>
    <relationshipName>BT_Sales_Invoices_AR</relationshipName>
    <type>Lookup</type>
</CustomField>