force-app/main/default/objects/Billings__c/fields/Division_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Division_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Division</label>
    <referenceTo>Division__c</referenceTo>
    <relationshipName>Invoices_AR</relationshipName>
    <type>Lookup</type>
</CustomField>